more decompiler cleanup